[新增]地圖初始化完成 / 測量功能完成 / 地圖縮小&放大&回到全圖 / 比例尺&游標座標列

--- a/app.html
+++ b/app.html
@@ -1,8 +1,58 @@
 <!DOCTYPE html>
 <html {{ HTML_ATTRS }}>
   <head {{ HEAD_ATTRS }}>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;500;700&display=swap" rel="stylesheet" crossorigin="anonymous">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/dom-to-image/2.6.0/dom-to-image.js" integrity="sha512-wUa0ktp10dgVVhWdRVfcUO4vHS0ryT42WOEcXjVVF2+2rcYBKTY7Yx7JCEzjWgPV+rj2EDUr8TwsoWF6IoIOPg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.0/FileSaver.js" integrity="sha512-UNbeFrHORGTzMn3HTt00fvdojBYHLPxJbLChmtoyDwB6P9hX5mah3kMKm0HHNx/EvSPJt14b+SlD8xhuZ4w9Lg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <!-- <script type="text/javascript" src="/ServerGate/SGSGate.ashx?F=~/scripts/Framework.js"></script> -->
+    
+    
+    <!-- <script type="text/javascript" src="../scripts/Base.js"></script>
+    <script type="text/javascript" src="../scripts/OperationBase.js"></script>
+    <script type="text/javascript" src="../scripts/SuperGeoUtility.js"></script>
+    <script type="text/javascript" src="../scripts/AjaxAgent.js"></script>
+    <script type="text/javascript" src="../scripts/Framework.js"></script>
+    <script type="text/javascript" src="../scripts/MapBase.js"></script>
+    <script type="text/javascript" src="../scripts/Controls.js"></script>
+    <script type="text/javascript" src="../scripts/MapLayer.js"></script>
+    <script type="text/javascript" src="../scripts/Navigate.js"></script>
+    <script type="text/javascript" src="../scripts/CachedLayer.js"></script>
+    <script type="text/javascript" src="../scripts/OpenStreetMap.js"></script>
+    <script type="text/javascript" src="../scripts/ToolControls.js"></script>
+    <script type="text/javascript" src="../scripts/Tasks.js"></script>
+    <script type="text/javascript" src="../scripts/GFX.js"></script>
+    <script type="text/javascript" src="../scripts/FX.js"></script>
+    <script type="text/javascript" src="../scripts/Compass.js"></script>
+    <script type="text/javascript" src="../scripts/Tracker.js"></script>
+    <script type="text/javascript" src="../scripts/Geometry.js"></script>
+    <script type="text/javascript" src="../scripts/Symbol.js"></script>
+    <script type="text/javascript" src="../scripts/Draw.js"></script>
+    <script type="text/javascript" src="../scripts/Overview.js"></script>
+    <script type="text/javascript" src="../scripts/Bookmark.js"></script>
+    <script type="text/javascript" src="../scripts/TemplatePicker.js"></script>
+    <script type="text/javascript" src="../scripts/Layer.js"></script>
+    <script type="text/javascript" src="../scripts/TiledLayer.js"></script>
+    <script type="text/javascript" src="../scripts/TileLayer.js"></script>
+    <script type="text/javascript" src="../scripts/DynamicLayer.js"></script>
+    <script type="text/javascript" src="../scripts/Graphic.js"></script>
+    <script type="text/javascript" src="../scripts/GraphicsLayer.js"></script>
+    <script type="text/javascript" src="../scripts/OSMLayer.js"></script>
+    <script type="text/javascript" src="../scripts/BingTiledLayer.js"></script>
+    <script type="text/javascript" src="../scripts/Infowindow.js"></script>
+    <script type="text/javascript" src="../scripts/Mercator.js"></script>
+    <script type="text/javascript" src="../scripts/CoordSys.js"></script>
+    <script type="text/javascript" src="../scripts/PrintTool.js"></script>
+    <script type="text/javascript" src="../scripts/Process.js"></script>
+    <script type="text/javascript" src="../scripts/Query.js"></script>
+    <script type="text/javascript" src="../scripts/Edit.js"></script>
+    <script type="text/javascript" src="../scripts/UndoManager.js"></script>
+    <script type="text/javascript" src="../scripts/Request.js"></script>
+    <script type="text/javascript" src="../scripts/WMSLayer.js"></script>
+    <script type="text/javascript" src="../scripts/WMTSLayer.js"></script>
+    <script type="text/javascript" src="../scripts/Google.js"></script>
+    <script type="text/javascript" src="../scripts/Base64.js"></script>
+    <script type="text/javascript" src="../scripts/Projection.js"></script>
+    <script type="text/javascript" src="../scripts/setMap.js"></script> -->
 
     {{ HEAD }}
   </head>
