--- a/app.html
+++ b/app.html
@@ -7,7 +7,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.0/FileSaver.js" integrity="sha512-UNbeFrHORGTzMn3HTt00fvdojBYHLPxJbLChmtoyDwB6P9hX5mah3kMKm0HHNx/EvSPJt14b+SlD8xhuZ4w9Lg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js" integrity="sha512-V/C9Axb8EEL4ix79ERIJmpRd6Mp1rWVSxa2PIBCdCxqhEsfCBWp/R0xJ4U495czhcuDWrGOFYo8+QI3lJ9DK5g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/proj4js/1.3.1/proj4.js" integrity="sha512-HPIkVeN4JL8hrWD1Mov+imhpp5AKR8ZnWYMeKOIg13HVSIZoq3TzFbXqMiJ0Ic5r9B0a/z3+MWd/H55MM9qycw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script type="text/javascript" src="/ServerGate/SGSGate.ashx?F=~/scripts/Framework.js"></script>
+    <script type="text/javascript" src="http://192.168.3.112/ServerGate/SGSGate.ashx?F=~/scripts/Framework.js"></script>
     
     
     <!-- <script type="text/javascript" src="../scripts/Base.js"></script>
@@ -55,6 +55,9 @@
     <script type="text/javascript" src="../scripts/Google.js"></script>
     <script type="text/javascript" src="../scripts/Base64.js"></script>
     <script type="text/javascript" src="../scripts/Projection.js"></script>
+    <script type="text/javascript" src="../scripts/GroupLayer.js"></script>
+    <script type="text/javascript" src="../scripts/KMLLayer.js"></script>
+    <script type="text/javascript" src="../scripts/VectorTiledLayer.js"></script>
     <script type="text/javascript" src="../scripts/setMap.js"></script> -->
 
     {{ HEAD }}
